--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,5 +12,6 @@
     <% if(typeof jsfile != 'undefined' && jsfile != 'no') { %>
     <script src="/<%= jsfile %>.js" defer></script>
     <% } %>
+    <link rel="icon" type="image/x-icon" href="/icons/favicon.png">
     <title>Digital Cookbook | <%= title %></title>
 </head>
